# resume-matching-ml

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
conf/base/: catalog.yml  logging.yml  parameters_data_engineering.yml  parameters_data_science.yml  parameters_evaluation.yml
docs/source/: conf.py  index.rst
job_match/: consts.py
job_match/data/: consts.py  make_dataset.py
src/: pyproject.toml  requirements.txt
src/job_match_ml/: __init__.py  __main__.py  settings.py
src/job_match_ml/pipelines/data_engineering/: nodes.py  pipeline.py
src/job_match_ml/pipelines/data_engineering/nodes/: __init__.py  download.py  process.py
src/job_match_ml/pipelines/data_science/: e5.py  evaluation.py  mp5.py  navec.py  nodes.py  pipeline.py
src/tests/: test_run.py
